tests/ui/suggestions/suggest-remove-refs-6.stderr
error[E0277]: the trait bound `&mut Vec<{integer}>: Trait` is not satisfied
  --> $DIR/suggest-remove-refs-6.rs:10:9
   |
LL |     foo(&mut vec![1]);
   |     --- ^^^^^^^^^^^^ the trait `Trait` is not implemented for `&mut Vec<{integer}>`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/suggest-remove-refs-6.rs:7:16
   |
LL | fn foo(_: impl Trait) {}
   |                ^^^^^ required by this bound in `foo`
help: consider removing the leading `&`-reference
   |
LL -     foo(&mut vec![1]);
LL +     foo(vec![1]);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
